--- a/index.html
+++ b/index.html
@@ -1035,6 +1035,13 @@
                     <div class="hotel-address">
                         Jimbaran, Bali, Indonesia
                     </div>
+                    <div style="margin: 16px 0;">
+                        <a href="https://maps.google.com/maps?q=Arpana+Villas+Jimbaran+Bali" 
+                           target="_blank" 
+                           style="display: inline-flex; align-items: center; gap: 8px; background: #4285f4; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 600; transition: all 0.2s ease;">
+                            📍 查看地图位置
+                        </a>
+                    </div>
                     <div class="hotel-note">
                         您的住宿已安排妥当，请按时入住<br>
                         <strong>预订日期：2025年6月14日 - 6月16日</strong>
@@ -1048,6 +1055,13 @@
                     </div>
                     <div class="hotel-address">
                         Jl. Belimbing Sari, Uluwatu, Bali, Indonesia
+                    </div>
+                    <div style="margin: 16px 0;">
+                        <a href="https://maps.google.com/maps?q=Alila+Villas+Uluwatu+Bali" 
+                           target="_blank" 
+                           style="display: inline-flex; align-items: center; gap: 8px; background: #4285f4; color: white; padding: 8px 16px; border-radius: 6px; text-decoration: none; font-size: 14px; font-weight: 600; transition: all 0.2s ease;">
+                            📍 查看地图位置
+                        </a>
                     </div>
                     <div class="hotel-note">
                         婚礼仪式将在这里举行
