--- a/index.html
+++ b/index.html
@@ -916,8 +916,8 @@
             <div style="background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(20px); border-radius: 16px; padding: 24px; margin-bottom: 32px; box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08); border: 1px solid rgba(255, 255, 255, 0.3);">
                 <div style="text-align: center;">
                     <h4 style="font-size: 1.125rem; font-weight: 600; margin-bottom: 12px; color: #1d1d1f; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', sans-serif;">💰 签证费用</h4>
-                    <div style="font-size: 2rem; font-weight: 600; color: #1d1d1f; margin-bottom: 8px; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;">$35 美元</div>
-                    <p style="font-size: 0.9rem; color: #86868b; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', sans-serif;">约 ¥250 人民币（按汇率7.15计算）</p>
+                    <div style="font-size: 2rem; font-weight: 600; color: #1d1d1f; margin-bottom: 8px; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', sans-serif;">500,000 印尼盾</div>
+                    <p style="font-size: 0.9rem; color: #86868b; font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', sans-serif;">约 $35 美元 / ¥250 人民币</p>
                 </div>
             </div>
             
@@ -934,36 +934,38 @@
                         <li><strong>护照要求：</strong>中国大陆护照，有效期6个月以上</li>
                         <li><strong>行程证明：</strong>往返机票预订单</li>
                         <li><strong>住宿证明：</strong>酒店预订确认单</li>
-                        <li><strong>申请费用：</strong>35美元</li>
-                        <li><strong>支付方式：</strong>Visa、MasterCard信用卡</li>
-                        <li><strong>处理时间：</strong>通常24-72小时内批准</li>
+                        <li><strong>申请费用：</strong>500,000印尼盾（约35美元）</li>
+                        <li><strong>支付方式：</strong>Visa、MasterCard、JCB信用卡</li>
+                        <li><strong>处理时间：</strong>通常即时批准（系统自动处理）</li>
+                        <li><strong>有效期：</strong>批准后90天内入境，可停留30天</li>
                     </ul>
                 </div>
 
                 <div class="grid-item">
                     <h3>📱 申请步骤</h3>
                     <ol class="step-list">
-                        <li>访问官方网站：<strong>indonesiavoa.vfsevisa.id</strong></li>
-                        <li>点击"Apply eVisa"注册新账户</li>
-                        <li>验证邮箱地址并登录系统</li>
-                        <li>选择"eVOA (Electronic Visa on Arrival)"</li>
-                        <li>选择国籍"China"，入境口岸"Ngurah Rai (Denpasar)"</li>
-                        <li>填写个人信息（姓名必须与护照完全一致）</li>
-                        <li>上传所需文件（护照、照片、机票、酒店）</li>
-                        <li>使用Visa/MasterCard支付35美元</li>
-                        <li>等待审批（通常24-72小时）</li>
-                        <li>收到批准邮件后下载并打印eVOA</li>
+                        <li>访问官方网站：<strong>evisa.imigrasi.go.id</strong></li>
+                        <li>在首页选择您的国籍"China"</li>
+                        <li>点击"Electronic Visa on Arrival (e-VoA)"</li>
+                        <li>填写申请表格（个人信息、护照信息、旅行信息）</li>
+                        <li>上传所需文件（护照首页扫描件、证件照）</li>
+                        <li>填写印尼的住宿地址和联系信息</li>
+                        <li>选择入境口岸"Ngurah Rai Airport, Bali"</li>
+                        <li>确认所有信息无误后提交申请</li>
+                        <li>使用Visa/MasterCard/JCB信用卡支付500,000印尼盾</li>
+                        <li>下载并保存eVOA确认函（PDF格式），打印备用</li>
                     </ol>
                 </div>
 
                 <div class="grid-item">
                     <h3>📄 材料要求</h3>
                     <ul>
-                        <li><strong>护照扫描件：</strong>护照信息页彩色扫描，清晰可见所有信息</li>
-                        <li><strong>证件照片：</strong>白底彩色照片，JPEG格式，尺寸35×45mm，文件大小不超过1MB</li>
-                        <li><strong>机票行程单：</strong>显示往返日期的英文预订单</li>
+                        <li><strong>护照扫描件：</strong>护照信息页彩色扫描，JPG/PNG格式，清晰可见所有信息</li>
+                        <li><strong>证件照片：</strong>彩色照片，JPEG/JPG/PNG格式，最小400×600像素，最大2MB</li>
+                        <li><strong>照片要求：</strong>头部到下巴占图片高度50-60%，眼部高度占50-60%</li>
+                        <li><strong>机票预订：</strong>显示往返日期的英文预订确认单</li>
                         <li><strong>酒店预订：</strong>英文确认单，显示入住日期和酒店信息</li>
-                        <li><strong>文件格式：</strong>所有文件必须为JPEG或PDF格式</li>
+                        <li><strong>有效期：</strong>eVOA批准后90天内必须入境印尼</li>
                     </ul>
                 </div>
 
